--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <h1>GracoSoft</h1>
-        <button id="btnCampus">Campus Virtual</button>
+        <div>
+            <h1>GracoSoft</h1>
+        </div>
+        <div>
+            <button id="btnCampus">Campus Virtual</button>
+        </div>
     </header>
     <main>
         <!-- Sección de cursos -->
@@ -27,7 +32,7 @@
         </form>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
