--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img class="imagen" src="assets/pre-universitario.jpg" alt="Pre universitario">
             </a>
             <a href="" target="_blank">
-                <img src="" alt="Marketing digital">
+                <img src="assets/Marketing-digital.jpg" alt="Marketing digital">
             </a>
         </section>
         <form>
